modify plugin lingzhi to dongtai

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = vulhub-cli
-version = 0.0.2
+version = 0.0.3
 author = owefsad
-author_email = owefsad@gmail.com
+author_email = dongzhiyong@huoxian.cn
 description = easy command tool for vulhub
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://www.huoxian.cn/
+url = https://github.com/HXSecurity/vulhub-compose
 project_urls =
-    Bug Tracker = https://github.com/huoxianclub/vulhub-compose/issues
+    Bug Tracker = https://github.com/HXSecurity/vulhub-compose/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
